# duckdb-rfuns

./: .Rbuildignore  .gitattributes  .gitignore  CMakeLists.txt  Makefile  README.md  test.R
.github/: 0.9.2.patch
.github/workflows/: ClientTests.yml  MainDistributionPipeline-0.10.0.yml  MainDistributionPipeline-0.10.1.yml  MainDistributionPipeline-0.10.2.yml  MainDistributionPipeline-0.9.2.yml  MainDistributionPipeline-1.0.0.yml  MainDistributionPipeline.yml  R-check.yaml  _extension_distribution_0.9.2.yml  _extension_distribution_1.0.0.yml
duckdb-rfuns-r/: .Rbuildignore  DESCRIPTION  LICENSE  NAMESPACE  configure
duckdb-rfuns-r/R/: aggregate.R  duckdb_con.R  project.R  relop.R  rfuns.R  zzz.R
duckdb-rfuns-r/inst/extension/: README.md
duckdb-rfuns-r/man/: aggregate.Rd  con.Rd  duckdb_con.Rd  rfuns.Rd  rfuns_as.character.Rd  rfuns_as.integer.Rd  rfuns_as.numeric.Rd  rfuns_in.Rd  rfuns_is.na.Rd  rfuns_sum.Rd
duckdb-rfuns-r/tests/: testthat.R
duckdb-rfuns-r/tests/testthat/: helper-expect_rfuns_in.R  helper-expect_spaceship.R  helper-gen.R  test-as_character.R  test-as_integer.R  test-as_numeric.R  test-base-eq.R  test-con.R  test-generated-eq.R  test-generated-gt.R  test-generated-gte.R  test-in.R  (+21 more)
r/: DESCRIPTION  LICENSE.md  configure
r/R/: duckdb_con.R
scripts/: extension-upload.sh
src/: add.cpp  as_character.cpp  as_integer.cpp  dispatch.cpp  eq.cpp  in.cpp  is_na.cpp  lt.cpp  minmax.cpp  relop.cpp  rfuns_extension.cpp  sum.cpp
src/include/: rfuns_extension.hpp
test/nodejs/: rfuns_test.js
test/python/: rfuns_test.py
test/sql/: rfuns.test
(+19 files in other folders)
